# LanCast

./: .gitignore  .prettierrc  ARCHITECTURE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml
src/: App.jsx  main.jsx  router.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  events.rs  main.rs  session_kill.rs
src-tauri/src/audit/: logger.rs
src-tauri/src/crypto/: aes_gcm.rs  ecdh.rs  hmac.rs  mod.rs  session.rs
src-tauri/src/discovery/: magic.rs  mod.rs  multicast.rs
src-tauri/src/groups/: invite.rs  manager.rs  mod.rs
src-tauri/src/network/: chunker.rs  mod.rs  peer.rs  tcp.rs  transfer.rs
src-tauri/src/screenshot/: linux.rs  mac.rs  mod.rs  win.rs
src/components/layout/: AppShell.jsx  ProtectedRoute.jsx  Sidebar.jsx  Tooltip.jsx
src/components/ui/: AuditLog.jsx  EmojiPicker.jsx  FilePreview.jsx  GroupCard.jsx  InviteModal.jsx  KillModal.jsx  KillSwitch.jsx  MessageBubble.jsx  NotificationItem.jsx  PeerCard.jsx  StatCard.jsx  Timer.jsx  TypingIndicator.jsx
src/hooks/: useAudit.js  useGroups.js  useMessages.js  usePeers.js  useSession.js  useTyping.js
src/pages/: AuditPage.jsx  ChatPage.jsx  GroupPage.jsx  HomePage.jsx  NotificationPage.jsx  PeersPage.jsx  ProfilePage.jsx
src/store/: appStore.js
src/styles/: animations.css  globals.css
