[package]
name = "Lancast"
version = "1.0.0"
description = "Broadcast on LAN. Encrypted. Instant. Traceless."
authors = ["Sambhav Dwivedi <sambhavdwivedi@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/sambhavdwivediofficial/lancast"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"

tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
getrandom = { version = "0.2", features = ["js"] }

dashmap = "6.0"
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
bytes = "1.7"
futures = "0.3"

socket2 = { version = "0.5", features = ["all"] }

thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSView"] }
objc2-foundation = "0.2"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.package.x25519-dalek]
opt-level = 3

[profile.release.package.aes-gcm]
opt-level = 3
